objects/GiftTransaction.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_Admin_Fees__c</fullName>
        <label>Admin Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NGO_Charitable_Amount__c</fullName>
        <label>Charitable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NGO_Daily_High_Price__c</fullName>
        <label>Daily High Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NGO_Daily_Low_Price__c</fullName>
        <label>Daily Low Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NGO_Date_of_Sale__c</fullName>
        <label>Date of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NGO_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NGO_Fair_Market_Value__c</fullName>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NGO_Gift_Vehicle_Type__c</fullName>
        <label>Gift Vehicle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate Gift Annuity</fullName>
                </value>
                <value>
                    <fullName>Flexible Gift Annuity</fullName>
                </value>
                <value>
                    <fullName>Deferred Gift Annuity</fullName>
                </value>
                <value>
                    <fullName>Charitable Lead Trust</fullName>
                </value>
                <value>
                    <fullName>Charitable Remainder Trust</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NGO_Gift_Vehicle__c</fullName>
        <label>Gift Vehicle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charitable Gift Annuity</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Pooled Income Fund</fullName>
                </value>
                <value>
                    <fullName>Donor Advised Fund</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>Bequest</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NGO_Number_of_Shares__c</fullName>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NGO_Ticker__c</fullName>
        <label>Ticker</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_Value_at_Sale__c</fullName>
        <label>Value at Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Gift_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Gift Transaction</label>
        <referenceTo>GiftTransaction</referenceTo>
        <relationshipLabel>Gift Transactions</relationshipLabel>
        <relationshipName>Gift_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>NGO_Gift_In_Kind_RecordType</fullName>
        <active>true</active>
        <label>Gift-In-Kind</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_One_Time_Gift_RecordType</fullName>
        <active>true</active>
        <label>One-Time Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Payment_RecordType</fullName>
        <active>true</active>
        <label>Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Planned_Gift_RecordType</fullName>
        <active>true</active>
        <label>Planned Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Stock_RecordType</fullName>
        <active>true</active>
        <label>Stock</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>